fix: make block background transparent so grid shows through gaps

--- a/client-budokan/src/grid.css
+++ b/client-budokan/src/grid.css
@@ -53,7 +53,7 @@
 
 .block {
   position: absolute;
-  background-color: rgb(15, 15, 15);
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
